# advent-of-code

./: LICENSE  README.md
2022/02/: game_02.py
2022/04/: cleanup01.py
2022/05/: stacks01.py  stacks02.py
2022/06/: datastream02.py
advent/2022/day01/: elf-2.py  elf.julia  elf.zig
advent/2022/day02/: game_01.py
advent/2022/day07/: system01.py  system02.py
advent/2022/day08/: tree_house01.py  tree_house01_2.py  tree_house02.py
advent/2022/day09/: rope01.py
advent/2023/rust/: Cargo.toml
advent/2023/rust/src/: day2.rs  day3.rs  day4.rs  main.rs
python/: pyproject.toml
python/advent/2022/day01/: elf.py
python/advent/2022/day03/: rucksack01.py  rucksack02.py
python/advent/2022/day04/: cleanup02.py
python/advent/2022/day06/: datastream01.py
rust/: Cargo.toml  README.md
rust/src/: day1.rs  day2.rs  main.rs
rust/src/year2023/: day3.rs
rust/src/year2024/: mod.rs
zig/: .gitignore  README.md  build.zig  build.zig.zon
zig/src/: main.zig
zig/src/solutions/2025/: day01.zig  day02.zig  day03.zig
