[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = ""
authors = ["Mathieu Leduc-Hamel <marrakis@gmail.com>"]
packages = [{ include = "advent" }]

[tool.poetry.dependencies]
python = "^3.9,<3.12"
progress = "^1.6"

[tool.poetry.dev-dependencies]
# Testing.
FreezeGun = "^1.2.2"
mock = "*"
pytest = "^7.1"
pytest-mock = "^3.8.1"

# Typing
mypy = "^0.910"
types-mock = "^4.0.15"
types-freezegun = "*"
types-docutils = "^0.17.0"
types-python-dateutil = "^2.8.0"
types-pytz = "^2022.2.1"

[[tool.poetry.source]]
name = "pypi_"
url = "https://pypi.org/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"